feat: add end time retrieval to exam state response and update DTO